--- a/index.html
+++ b/index.html
@@ -91,15 +91,16 @@
    </div>
         <!--/handmade-->
           <!-- polish-->
-        <h2>Książki po polsku / podręczniki</h2>
+        <h2>Książki po polsku</h2>
         <div class="goods" id="polish">            
         <div class="book-01"><img src="img/lalka_01.jpg" title="Lalka, Bolesław Prus"><b>Lalka + audiobook</b><i>Bolesław Prus</i></div>
         <div class="book-01"><img src="img/balladyna_01.jpg"  title="Balladyna, Juliusz Słowacki"><b>Balladyna</b><i>Juliusz Słowacki</i></div>  
         <div class="book-01"><img src="img/maria_konopnicka_01.jpg" title="Novele, Maria Konopnicka<"><b>Nowele</b> <i>Maria Konopnicka</i></div>
-        <div class="book-01"><img src="img/sieniewicz_01.jpg" title="Rebelio, Moriusz Sieniewicz"><b>Rebelio</b><i>Moriusz Sieniewicz</i></div>   
+       <div class="book-01"><img src="img/morris_01.jpg" title="Tatuażysta z Auszwitz"><b>Tatuażysta z Auszwitz</b><i>Heather Morris</i></div> 
+        <div class="book-01"><img src="img/tajemnica_01.jpg" title="Tajemnica pożarów"><b>Tajemnica pożarów</b> <i>Marłin Widmark, Helena Willis</i></div> 
+         <div class="book-01"><img src="img/sieniewicz_01.jpg" title="Rebelio, Moriusz Sieniewicz"><b>Rebelio</b><i>Moriusz Sieniewicz</i></div>   
         <div class="book-01"><img src="img/slon_01.jpg" title="Tropiliśmy słonia Tiemoco, Bernhard Grzimek"><b>Tropiliśmy słonia Tiemoco</b> <i>Bernhard Grzimek</i></div>
-        <div class="book-01"><img src="img/morris_01.jpg" title="Tatuażysta z Auszwitz"><b>Tatuażysta z Auszwitz</b><i>Heather Morris</i></div> 
-        <div class="book-01"><img src="img/tajemnica_01.jpg" title="Tajemnica pożarów"><b>Tajemnica pożarów</b> <i>Marłin Widmark, Helena Willis</i></div>        <div class="book-01"><img src="img/fitzpatrick_01.jpg" title="Niebespeczne kłamstwa"><b>Niebespeczne kłamstwa</b><i>Becca Fitzpatrick</i></div>
+            <div class="book-01"><img src="img/fitzpatrick_01.jpg" title="Niebespeczne kłamstwa"><b>Niebespeczne kłamstwa</b><i>Becca Fitzpatrick</i></div>
          <div class="book-01"><img src="img/michalak_01.jpg" title="Pisarka"><b>Pisarka</b> <i>Anna Michalak</i></div>
          <div class="book-01"><img src="img/hawkins_01.jpg" title="Zapisane w wodzie"><b>Zapisane w wodzie</b> <i>Paula Hawkins</i></div>
             <div class="book-01"><img src="img/hawkins_02.jpg" title="Dziewczyna z pociągu"><b>Dziewczyna z pociągu</b> <i>Paula Hawkins</i></div>
@@ -112,8 +113,35 @@
          <div class="book-01"><img src="img/mojes_01.jpg" title="Zanim się pojawiłeś"><b>Zanim się pojawiłeś</b> <i>Jojo Mojes</i></div>
          <div class="book-01"><img src="img/bator_01.jpg" title="Ciemno, prawie noc"><b>Ciemno, prawie noc</b> <i>Joanna Bator</i></div>
          <div class="book-01"><img src="img/pawlikowska_01.jpg" title="Błondynka w Japonii"><b>Błondynka w Japonii</b> <i>Beata Pawlikowska</i></div>
-         <div class="book-01"><img src="img/elementarz_01.jpg" title="Elementarz"><b>Elementarz współczesny</b> <i>Anna Boboryk</i></div>
-         <div class="book-01"><img src="img/hurra_03.jpg" title="Hurra Po Polsku III"><b>Hurra Po Polsku III +2 CD</b> <i>Prolog 2017</i></div>  
+          <div class="book-01"><img src="img/jr_czasami.jpg" title="Czasami warto umrzeć"><b>Czasami warto umrzeć</b> <i>Lee Child</i></div>  
+          <div class="book-01"><img src="img/jr_echo.jpg" title="Echo w płomeniach"><b>Echo w płomeniach</b> <i>Lee Child</i></div>
+          <div class="book-01"><img src="img/jr_elita.jpg" title="Elita zabójców"><b>Elita zabójców</b> <i>Lee Child</i></div>
+          <div class="book-01"><img src="img/jr_jutro.jpg" title="Jutro może zniknąć"><b>Jutro może zniknąć</b> <i>Lee Child</i></div>
+          <div class="book-01"><img src="img/jr_nic_do_stracenia.jpg" title="Nic do stracenia"><b>Nic do stracenia</b> <i>Lee Child</i></div>
+          <div class="book-01"><img src="img/jr_niepryjaciel.jpg" title="Nieprzyjaciel"><b>Nieprzyjaciel</b> <i>Lee Child</i></div>
+          <div class="book-01"><img src="img/jr_nigdy.jpg" title="Nigdy nie wracaj"><b>Nigdy nie wracaj</b> <i>Lee Child</i></div>
+           <div class="book-01"><img src="img/jr_ostatnia_sprawa.jpg" title="Ostatnia sprawa"><b>Ostatnia sprawa</b> <i>Lee Child</i></div>
+           <div class="book-01"><img src="img/jr_podejrzany.jpg" title="Podejrzany"><b>Podejrzany</b> <i>Lee Child</i></div>
+           <div class="book-01"><img src="img/jr_poszukiwany.jpg" title="Poszukiwany"><b>Poszukiwany</b> <i>Lee Child</i></div>
+           <div class="book-01"><img src="img/jr_poziom.jpg" title="Poziom śmierci"><b>Poziom śmierci</b> <i>Lee Child</i></div>
+           <div class="book-01"><img src="img/jr_sprawa.jpg" title="Sprawa osobista"><b>Sprawa osobista</b> <i>Lee Child</i></div>
+           <div class="book-01"><img src="img/jr_uprowadzony.jpg" title="Uprowadzony"><b>Uprowadzony</b> <i>Lee Child</i></div>
+           <div class="book-01"><img src="img/jr_wrog.jpg" title="Wróg bez twarzy"><b>Wróg bez twarzy</b> <i>Lee Child</i></div>            
+           <div class="book-01"><img src="img/b_02.jpg" title="Afgańczyk"><b>Afgańczyk</b> <i>Frederik Forsyth</i></div>
+           <div class="book-01"><img src="img/b_03.jpg" title="Nasz człowiek w Szanghaju"><b>Nasz człowiek w Szanghaju</b> <i>Asa Lantz</i></div>
+           <div class="book-01"><img src="img/b_04.jpg" title="Pielgrzym"><b>Pielgrzym</b> <i>Terry Haves</i></div> 
+           <div class="book-01"><img src="img/b_05.jpg" title="Maybe someday"><b>Maybe someday</b> <i>Cooleen Hoover</i></div> 
+            <div class="book-01"><img src="img/b_06a.jpg" title="Pasje utajone"><b>Pasje utajone, czyli zycie Zygmyndta Freuda, t I, II</b><i>Irving Stone</i></div> 
+            <div class="book-01"><img src="img/b_07.jpg" title="Udręka i ekstaza"><b>Udręka i ekstaza, t I, II</b> <i>Irving Stone</i></div> 
+            <div class="book-01"><img src="img/b_08.jpg" title="Bez przebaczenia"><b>Bez przebaczenia</b> <i>Jack Higgnis</i></div>  
+          <div class="book-01"><img src="img/b_09.jpg" title="Malarka z Szangchaju"><b>Malarka z Szangchaju</b> <i>Jennifer Epstein</i></div>   
+          <div class="book-01"><img src="img/b_10.jpg" title="7 razy dziś"><b>7 razy dziś</b> <i>Loren Oliver</i></div>   
+         <div class="book-01"><img src="img/b_11.jpg" title="Rękopis chancellora"><b>Rękopis chancellora</b> <i>Robert Ludlum</i></div>
+         <div class="book-01"><img src="img/b_18.jpg" title="W głąb króliczej nory"><b>W głąb króliczej nory</b> <i>Peter Abrahams</i></div>    
+          <div class="book-01"><img src="img/b_12.jpg" title="Uniewinnenie"><b>Uniewinnenie</b> <i>Dmitrij Bykow</i></div>
+       <div class="book-01"><img src="img/b_19.jpg" title="Powrót do domu"><b>Powrót do domu</b> <i>Bernard Shlink</i></div>
+           <div class="book-01"><img src="img/b_13.jpg" title="Domowy poradnik zdrowia"><b>Domowy poradnik zdrowia</b> <i></i></div> 
+           <div class="book-01"><img src="img/b_17.jpg" title="Piłka nożna"><b>Piłka nożna</b> <i></i></div>
         <div class="br"></div>
       </div>
         <!-- /polish-->
@@ -122,28 +150,34 @@
      <div class="goods" id="russian">
          <div class="book-01"><img src="img/mickiewicz_01.jpg" title="Стихотворения. Поэмы, Адам Мицкевич"><b>Стихотворения. Поэмы</b><i>Адам Мицкевич</i></div>  <div class="book-01"><img src="img/lem_01.jpg" title="Солярис"><b>Солярис</b><i>Станислав Лем</i></div>
          <div class="book-01"><img src="img/lem_02.jpg" title="Охота"><b>Охота</b><i>Станислав Лем</i></div>
-         <div class="book-01"><img src="img/tokarczuk_01.jpg" title=""><b>Бегуны</b><i>Ольга Токарчук</i></div>
-         <div class="book-01"><img src="img/tokarczuk_02.jpg" title=""><b>Последние истории</b><i>Ольга Токарчук</i></div>
-         <div class="book-01"><img src="img/tokarczuk_03.jpg" title=""><b>Диковинные истории</b><i>Ольга Токарчук</i></div>
+         <div class="book-01"><img src="img/tokarczuk_01.jpg" title="Бегуны"><b>Бегуны</b><i>Ольга Токарчук</i></div>
+         <div class="book-01"><img src="img/tokarczuk_02.jpg" title="Последние истории"><b>Последние истории</b><i>Ольга Токарчук</i></div>
+         <div class="book-01"><img src="img/tokarczuk_03.jpg" title="Диковинные истории"><b>Диковинные истории</b><i>Ольга Токарчук</i></div>
          <div class="book-01"><img src="img/jasienski_01.jpg" title="Избранное, Бруно Ясенский"><b>Избранное</b><i>Бруно Ясенский</i></div> 
          <div class="book-01"><img src="img/polish_culture_01.jpg" title="Польская культура в зеркале веков"><b>Польская культура<br/>в зеркале веков</b><i>Издательство «Материк»</i></div> 
          <div class="book-01"><img src="img/devis_01.jpg" title="Избранная лирика, Леопольд Стафф"><b>Сердце Европы</b><i>Норман Дэвис</i></div>
         <div class="book-01"><img src="img/leopold_staff_01.jpg" title="Избранная лирика, Леопольд Стафф"><b>Избранная лирика</b><i>Леопольд Стафф</i></div> 
           <div class="book-01"><img src="img/szults_01.jpg" title="Уцелевшие, Бруно Шульц"><b>Уцелевшие</b><i>Бруно Шульц</i></div>  
-         <div class="book-01"><img src="img/broniewski_01.jpg" title="Два голоса, или Поминовение, Владислав Броневский"><b>Два голоса, или Поминовение</b><i>Владислав Броневский</i></div>   
-        <div class="book-01"><img src="img/selwa_01.jpg" title="Сельва, Мачей Кучиньский"><b>Сельва</b><i>Мачей Кучиньский</i></div>
+         <div class="book-01"><img src="img/broniewski_01.jpg" title="Два голоса, или Поминовение, Владислав Броневский"><b>Два голоса, или Поминовение</b><i>Владислав Броневский</i></div> 
+         <div class="book-01"><img src="img/b_01.jpg" title="Крымские сонеты"><b>Крымские сонеты</b><i>Адам Мицкевич</i></div>
+         <div class="book-01"><img src="img/selwa_01.jpg" title="Сельва, Мачей Кучиньский"><b>Сельва</b><i>Мачей Кучиньский</i></div>
          <div class="book-01"><img src="img/kraal_01.jpg" title="Королю червонному - дорога дальняя, Ханна Крааль"><b>Королю червонному - дорога дальняя</b><i>Ханна Крааль</i></div>
          <div class="br"></div>
     </div>
         <!-- /russian--> 
         <!-- Albumy-->
-        <h2>Albumy</h2>
+        <h2>Albumy / podręczniki</h2>
      <div class="goods" id="albumy">
+          <div class="book-01"><img src="img/b_14.jpg" title="Ordery i odznaczenia polskie"><b>Ordery i odznaczenia<br/>polskie i ich kawalerowie</b></div> 
          <div class="book-01"><img src="img/polish_art_01.jpg" title="Искусство Польши"><b>Искусство Польши</b></div>
          <div class="book-01"><img src="img/matejko_01.jpg" title="Jan Matejko"><b>Jan Matejko</b></div>  
         <div class="book-01"><img src="img/michalowski_01.jpg" title="Piotr Michałowski"><b>Piotr Michałowski</b></div>           
          <div class="book-01"><img src="img/250_01.jpg" title="250 fotografii zamków i palaców Polskich"><b>250 fotografii<br/>zamków i palaców Polskich</b><i>Warszawa, 1957</i></div> 
-         <div class="book-01"><img src="img/malopolska_01.jpg" title="Małopolska"><b>Małopolska</b></div>           
+         <div class="book-01"><img src="img/malopolska_01.jpg" title="Małopolska"><b>Małopolska</b></div>
+         <div class="book-01"><img src="img/b_15.jpg" title="Cuda świata przewodnik po skarbach cywilizacji"><b>Cuda świata<br/>Przewodnik po skarbach cywilizacji</b> <i></i></div>
+         <div class="book-01"><img src="img/b_16.jpg" title="UNESCO treasures  Skarba UNESCO"><b>UNESCO treasures<br/> Skarba UNESCO</b> <i></i></div>
+          <div class="book-01"><img src="img/elementarz_01.jpg" title="Elementarz"><b>Elementarz współczesny</b> <i>Anna Boboryk</i></div>
+         <div class="book-01"><img src="img/hurra_03.jpg" title="Hurra Po Polsku III"><b>Hurra Po Polsku III +2 CD</b> <i>Prolog 2017</i></div>
          <div class="br"></div>
     </div>
       <!-- /Albumy--> 
