--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="book-01"><img src="img/tania_03.jpg"><b>Wisiorek haftowany #1</b> <i>5x7 cm</i></div> 
         <div class="book-01"><img src="img/tania_04.jpg"><b>Wisiorek haftowany #2</b> <i>7x5 cm</i></div> 
         <div class="book-01"><img src="img/tania_05.jpg"><b>Wisiorek haftowany #3</b> <i>7x5 cm</i></div>
-        <div class="book-01"><img src="img/podkladki_01.jpg"><b>Podkładki</b> <i> cm</i></div>
+        <div class="book-01"><img src="img/podkladki_01.jpg"><b>Podkładki</b> <i> d=9 cm</i></div>
         <div class="br"></div>             
    </div>
         <!--/handmade-->
