--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible">
         <link rel="shortcut icon" href="https://wospmoskwa.github.io/favicon.ico">
-        <title>WOŚP Moskwa 2021</title>
+        <title>WOŚP Moskwa 2021 | SZTAB Moskwa zaprasza na targi na rzecz WOŚP 12 grudnia 2020</title>
         <link rel="stylesheet" href="css.css" type="text/css" />
     </head>
     <body>
