--- a/index.html
+++ b/index.html
@@ -40,7 +40,15 @@
               <a href="mailto:wosp.moskwa@gmail.com" class="wosp">wosp.moskwa@gmail.com</a></div><div class="br"></div> 
           <p class="mask">Bardzo prosimy o przestrzeganie bezpieczeństwa dla naszego wspólnego dobra. Wstęp na targi możliwy tylko dla gości w maseczkach.<br/>Просим уважать друг друга и не забывать о мерах безопасности. Вход на ярмарку только в масках!</p>
       <div class="br"></div>
-      </div>  
+          <p style="background: url(img/e_skarbonka.png) no-repeat top left; padding-left:240px;">W tym roku szczególnie zachęcamy do bezgotówkowych wpłat.
+Tym sposobem, będziecie mogli zapłacić za zakupy na naszych targach. Zrobić wpłatę jest prosto, a w razie problemów pomogą Wam nasi wolontariusze.
+E-skarbonka obsługuje wszystkie karty Visa i Mastercard (nie obsługuje karty Mir)<br/>
+              В этом году рекомендуем безналичный способ оплаты на нашей ярмарке - это несложно, наши волонтеры всегда с удовольствием вам помогут. Электронная кружка обслуживает все типы платежных систем (Visa и Mastercard, кроме карт МИР)<br/>
+<a href="https://eskarbonka.wosp.org.pl/vyhqkk" target="_blank">E-skarbonka</a>          
+          </p>
+      </div> 
+      
+      
             <!--div class="rezerw"></div-->
         <h2>Ozdoby choinkowe: <span style="text-transform:none;">Do kupienia tylko na naszym grudniowym jarmarku!</span></h2>
          <div class="goods" id="ozdoby_choinkowe">  
@@ -217,8 +225,8 @@
            <div class="goods" id="map"><img src="img/map.png" width="484" height="335" class="map"></div>
       <!-- /contacts-->
      </div>
-        <!--/ main container --> 
-<!-- Yandex.Metrika counter -->
+        <!--/ main container -->   
+        <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
