--- a/index.html
+++ b/index.html
@@ -40,14 +40,13 @@
               <a href="mailto:wosp.moskwa@gmail.com" class="wosp">wosp.moskwa@gmail.com</a></div><div class="br"></div> 
           <p class="mask">Bardzo prosimy o przestrzeganie bezpieczeństwa dla naszego wspólnego dobra. Wstęp na targi możliwy tylko dla gości w maseczkach.<br/>Просим уважать друг друга и не забывать о мерах безопасности. Вход на ярмарку только в масках!</p>
       <div class="br"></div>
-          <p style="background: url(img/e_skarbonka.png) no-repeat top left; padding-left:240px;">W tym roku szczególnie zachęcamy do bezgotówkowych wpłat.
+          <p class="eskarbonka">W tym roku szczególnie zachęcamy do bezgotówkowych wpłat.
 Tym sposobem, będziecie mogli zapłacić za zakupy na naszych targach. Zrobić wpłatę jest prosto, a w razie problemów pomogą Wam nasi wolontariusze.
-E-skarbonka obsługuje wszystkie karty Visa i Mastercard (nie obsługuje karty Mir)<br/>
-              В этом году рекомендуем безналичный способ оплаты на нашей ярмарке - это несложно, наши волонтеры всегда с удовольствием вам помогут. Электронная кружка обслуживает все типы платежных систем (Visa и Mastercard, кроме карт МИР)<br/>
+E-skarbonka obsługuje wszystkie karty Visa i Mastercard (nie obsługuje karty Mir).<br/>
+              В этом году рекомендуем безналичный способ оплаты на нашей ярмарке - это несложно, наши волонтеры всегда с удовольствием вам помогут. Электронная кружка обслуживает все типы платежных систем (Visa и Mastercard, кроме карт МИР).<br/>
 <a href="https://eskarbonka.wosp.org.pl/vyhqkk" target="_blank">E-skarbonka</a>          
           </p>
-      </div> 
-      
+      </div>       
       
             <!--div class="rezerw"></div-->
         <h2>Ozdoby choinkowe: <span style="text-transform:none;">Do kupienia tylko na naszym grudniowym jarmarku!</span></h2>
