--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 Tym sposobem, będziecie mogli zapłacić za zakupy na naszych targach. Zrobić wpłatę jest prosto, a w razie problemów pomogą Wam nasi wolontariusze.
 E-skarbonka obsługuje wszystkie karty Visa i Mastercard (nie obsługuje karty Mir).<br/>
               В этом году рекомендуем безналичный способ оплаты на нашей ярмарке - это несложно, наши волонтеры всегда с удовольствием вам помогут. Электронная кружка обслуживает все типы платежных систем (Visa и Mastercard, кроме карт МИР).<br/>
-<a href="https://eskarbonka.wosp.org.pl/vyhqkk" target="_blank">eSkarbonka</a>      
+<a href="https://eskarbonka.wosp.org.pl/vyhqkk" target="_blank">eSkarbonka</a>          
           </p>
       </div>       
       
@@ -199,7 +199,13 @@ E-skarbonka obsługuje wszystkie karty Visa i Mastercard (nie obsługuje karty M
         <h2>DVD, CD</h2>
      <div class="goods" id="dvd">
          <div class="book-01"><img src="img/gorecki_01.jpg" title="Henryk Górecki"><b>Henryk Górecki</b><i>CD</i></div> 
-         <div class="book-01"><img src="img/chopin_01.jpg" title="Frederyk Chopin"><b>Frederyk Chopin</b><i>CD</i></div> 
+         <div class="book-01"><img src="img/ip_gorecki.jpg" title="Henryk Górecki"><b>Henryk Górecki</b><i>CD</i></div> 
+         <div class="book-01"><img src="img/chopin_01.jpg" title="Frederyk Chopin"><b>Frederyk Chopin</b><i>CD</i></div>
+         <div class="book-01"><img src="img/ip_chopin-etudes.jpg" title="Frederyk Chopin"><b>Frederyk Chopin</b><i>CD</i></div>
+         <div class="book-01"><img src="img/ip_basiewicz.jpg" title="Grażyna Bacewicz"><b>Grażyna Bacewicz: Violin Concertos, Volume 1</b><i>CD</i></div>
+         <div class="book-01"><img src="img/ip_moniuszko.jpg" title="Moniuszko: Straszny dwór"><b>Moniuszko: Straszny dwór</b><i>CD</i></div>
+         <div class="book-01"><img src="img/ip_penderecki-Pasja.jpg" title="Krzysztof Penderecki: Pasja"><b>Krzysztof Penderecki: Pasja</b><i>CD</i></div>
+         
          <div class="book-01"><img src="img/munk_01.jpg" title="Andrzej Munk"><b>Andrzej Munk</b><i>DVD</i></div> 
          <div class="book-01"><img src="img/kieslowski_01.jpg" title="Krzysztof Kiesłowski"><b>Krzysztof Kiesłowski</b><i>DVD</i></div>
          <div class="book-01"><img src="img/milosc_kino_01.jpg" title="Wypisz,wymałuj... Miłość"><b>Wypisz,wymałuj... Miłość</b><i>DVD</i></div>
