--- a/index.html
+++ b/index.html
@@ -150,8 +150,7 @@ E-skarbonka obsługuje wszystkie karty Visa i Mastercard (nie obsługuje karty M
          <div class="book-01"><img src="img/b_11.jpg" title="Rękopis chancellora"><b>Rękopis chancellora</b> <i>Robert Ludlum</i></div>
          <div class="book-01"><img src="img/b_18.jpg" title="W głąb króliczej nory"><b>W głąb króliczej nory</b> <i>Peter Abrahams</i></div>    
           <div class="book-01"><img src="img/b_12.jpg" title="Uniewinnenie"><b>Uniewinnenie</b> <i>Dmitrij Bykow</i></div>
-       <div class="book-01"><img src="img/b_19.jpg" title="Powrót do domu"><b>Powrót do domu</b> <i>Bernard Shlink</i></div>
-            
+       <div class="book-01"><img src="img/b_19.jpg" title="Powrót do domu"><b>Powrót do domu</b> <i>Bernard Shlink</i></div>            
             <div class="book-01"><img src="img/09_03.jpg" title="Mam przyjaciela pilota"><b>Marzenia i tajemnice</b> <i>Danyta Walesa</i></div>
             <div class="book-01"><img src="img/09_04.jpg" title="Kobiety diktatorów"><b>Kobiety diktatorów</b> <i>Diana Ducret</i></div>
             <div class="book-01"><img src="img/09_05.jpg" title="Mężczyźni są z Marsa, kobiety z Wenus"><b>Mężczyźni są z Marsa, kobiety z Wenus</b> <i>John Gray</i></div>
@@ -160,7 +159,7 @@ E-skarbonka obsługuje wszystkie karty Visa i Mastercard (nie obsługuje karty M
             <div class="book-01"><img src="img/09_17.jpg" title="Tęsknota"><b>Tęsknota</b> <i>Gaël Faye</i></div>
             <div class="book-01"><img src="img/09_18.jpg" title="Umami"><b>Umami</b> <i>Laia Jufresa</i></div> 
             <div class="book-01"><img src="img/09_19.jpg" title="Frankenstein w Bagdadzie"><b>Frankenstein w Bagdadzie</b> <i>Ahmed Saadawi</i></div> 
-            <div class="book-01"><img src="img/09_20.jpg" title="Czułe słowka"><b>Czułe słowka</b> <i>Larry McMurtry</i></div>  
+            <div class="book-01"><img src="img/09_20.jpg" title="Czułe słówka"><b>Czułe słowka</b> <i>Larry McMurtry</i></div>  
            <div class="book-01"><img src="img/b_13.jpg" title="Domowy poradnik zdrowia"><b>Domowy poradnik zdrowia</b> <i></i></div> 
            <div class="book-01"><img src="img/b_17.jpg" title="Piłka nożna"><b>Piłka nożna</b> <i></i></div>            
             <div class="book-01"><img src="img/09_09.jpg" title="Jajuńciek"><b>Jajuńciek</b> <i>Paweł Pawlak</i></div>
