--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 Tym sposobem, będziecie mogli zapłacić za zakupy na naszych targach. Zrobić wpłatę jest prosto, a w razie problemów pomogą Wam nasi wolontariusze.
 E-skarbonka obsługuje wszystkie karty Visa i Mastercard (nie obsługuje karty Mir).<br/>
               В этом году рекомендуем безналичный способ оплаты на нашей ярмарке - это несложно, наши волонтеры всегда с удовольствием вам помогут. Электронная кружка обслуживает все типы платежных систем (Visa и Mastercard, кроме карт МИР).<br/>
-<a href="https://eskarbonka.wosp.org.pl/vyhqkk" target="_blank">eSkarbonka</a>          
+<a href="https://eskarbonka.wosp.org.pl/vyhqkk" target="_blank"><b>eSkarbonka</b></a>    
           </p>
       </div>       
       
