--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ E-skarbonka obsługuje wszystkie karty Visa i Mastercard (nie obsługuje karty M
             <div class="book-01"><img src="img/09_17.jpg" title="Tęsknota"><b>Tęsknota</b> <i>Gaël Faye</i></div>
             <div class="book-01"><img src="img/09_18.jpg" title="Umami"><b>Umami</b> <i>Laia Jufresa</i></div> 
             <div class="book-01"><img src="img/09_19.jpg" title="Frankenstein w Bagdadzie"><b>Frankenstein w Bagdadzie</b> <i>Ahmed Saadawi</i></div> 
-            <div class="book-01"><img src="img/09_20.jpg" title="Czułe słówka"><b>Czułe słowka</b> <i>Larry McMurtry</i></div>  
+            <div class="book-01"><img src="img/09_20.jpg" title="Czułe słówka"><b>Czułe słówka</b> <i>Larry McMurtry</i></div>  
            <div class="book-01"><img src="img/b_13.jpg" title="Domowy poradnik zdrowia"><b>Domowy poradnik zdrowia</b> <i></i></div> 
            <div class="book-01"><img src="img/b_17.jpg" title="Piłka nożna"><b>Piłka nożna</b> <i></i></div>            
             <div class="book-01"><img src="img/09_09.jpg" title="Jajuńciek"><b>Jajuńciek</b> <i>Paweł Pawlak</i></div>
