--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta http-equiv="X-UA-Compatible">
         <link rel="shortcut icon" href="https://wospmoskwa.github.io/favicon.ico">
         <title>WOŚP Moskwa 2021 | SZTAB Moskwa zaprasza na targi na rzecz WOŚP 12 grudnia 2020</title>
+         <meta name="description" content="Moskiewski sztab Wielkiej Orkiestry Świątecznej Pomocy zaprasza na charytatywny kiermasz literatury polskiej i jarmark bożonarodzeniowy.  
+         Całkowity dochód ze sprzedaży przeznaczony będzie na cele 29. Finału WOŚP, czyli zakup sprzętu dla laryngologii, otolaryngologii i diagnostyki głowy" />
         <link rel="stylesheet" href="css.css" type="text/css" />
     </head>
     <body>
