--- a/0.html
+++ b/0.html
@@ -15,7 +15,7 @@
         <div class="main">
      <!-- top menu-->
         <div class="topmenu-wrap">
-<div class="topmenu"><a href="#ozdoby_choinkowe">Ozdoby&nbsp;choinkowe</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#handmade">Handmade</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#polish">Książki&nbsp;po&nbsp;polsku</a>&nbsp;&nbsp;|&nbsp; <a href="#russian">Книги&nbsp;на&nbsp;русском</a>&nbsp;&nbsp;|&nbsp; <a href="#albumy">Albumy</a>&nbsp;&nbsp;|&nbsp; <a href="#dvd">DVD,&nbsp;CD</a>&nbsp;|&nbsp; <a href="#contact">Kontakt</a></div></div><div class="br"></div>
+<div class="topmenu"><a href="#ozdoby_choinkowe">Ozdoby&nbsp;choinkowe</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#handmade">Handmade</a>&nbsp;&nbsp;|&nbsp;&nbsp;<!--a href="#polish">Książki&nbsp;po&nbsp;polsku</a>&nbsp;&nbsp;|&nbsp; <a href="#russian">Книги&nbsp;на&nbsp;русском</a>&nbsp;&nbsp;|&nbsp; <a href="#albumy">Albumy</a>&nbsp;&nbsp;|&nbsp; <a href="#dvd">DVD,&nbsp;CD</a>&nbsp;|&nbsp; --><a href="#contact">Kontakt</a></div></div><div class="br"></div>
  </div><div class="br"></div>
    <!-- /top menu-->
      <!-- main container -->   
@@ -88,7 +88,14 @@ E-skarbonka obsługuje wszystkie karty Visa i Mastercard (nie obsługuje karty M
         <div class="br"></div>             
    </div>
         <!--/handmade-->       
-       
+       <!-- contacts-->
+        <h2>Kontakt</h2>
+          <div class="goods" id="contact">
+          <div class="contacts"><a href="https://www.facebook.com/WOŚP-Moskwa-100293481406100/" target="_blank" class="face">WOŚP Moskwa Nonprofit Organization</a>
+              <a href="mailto:wosp.moskwa@gmail.com" class="wosp">wosp.moskwa@gmail.com</a></div>
+              <div class="br"></div><br/>
+            </div>     
+      <!-- /contacts-->
      </div>
         <!--/ main container -->   
         <!-- Yandex.Metrika counter -->
