--- a/0.html
+++ b/0.html
@@ -5,11 +5,11 @@
         <meta http-equiv="X-UA-Compatible">
         <link rel="shortcut icon" href="https://wospmoskwa.github.io/favicon.ico">
         <title>WOŚP Moskwa 2021 | SZTAB Moskwa zaprasza na targi na rzecz WOŚP 12 grudnia 2020</title>
-        <meta name="description" content="Moskiewski sztab Wielkiej Orkiestry Świątecznej Pomocy zaprasza na charytatywny kiermasz literatury polskiej i jarmark bożonarodzeniowy. Całkowity dochód ze sprzedaży przeznaczony będzie na cele 29. Finału WOŚP, czyli zakup sprzętu dla laryngologii, otolaryngologii i diagnostyki głowy" />
+        <meta name="description" content="Moskiewski sztab Wielkiej Orkiestry Świątecznej Pomocy zaprasza na charytatywny jarmark bożonarodzeniowy. Całkowity dochód ze sprzedaży przeznaczony będzie na cele 29. Finału WOŚP, czyli zakup sprzętu dla laryngologii, otolaryngologii i diagnostyki głowy" />
         <link rel="stylesheet" href="css.css" type="text/css" />
     </head>
     <body>
-        <div class="banner" title="SZTAB Moskwa zaprasza na targi na rzecz WOŚP 12 grudnia 2020">
+        <div class="banner" title="SZTAB Moskwa zaprasza na targi na rzecz WOŚP">
             <div>na targi <nobr>na rzecz <b><span style="color: #FFED00;">W</span><span style="color: #EE7003;">O</span><span style="color: #E30613;">Ś</span><span style="color: #E6007E;">P</span></b></nobr></div>
         </div>
         <div class="main">
