--- a/0.html
+++ b/0.html
@@ -31,8 +31,9 @@
           <b>Kontakt:</b> +7 915 2007192 (Bogna), +7 925 3205824 (Ania)
           <p> <b>Московский штаб Большого Оркестра Праздничной Помощи</b> и&nbsp;Клуб польского языка в&nbsp;Москве сердечно приглашают Вас на&nbsp;благотворительную ярмарку рождественских крафтовых изделий и&nbsp;подарков.
               Общий доход от&nbsp;продажи будет направлен на&nbsp;благотворительные цели <nobr>29-го финала</nobr> Большого оркестра праздничной помощи, то&nbsp;есть на&nbsp;покупку оборудования для отоларингологии, <nobr>ЛОР-инструментов</nobr> и&nbsp;диагностики заболеваний головного мозга.
-      <br/> <b>Контакты</b> +7 915 2007192 (Богна), +7 925 3205824 (Аня) 
-      <div class="contacts"><a href="https://www.facebook.com/WOŚP-Moskwa-100293481406100/" target="_blank"  class="face">WOŚP Moskwa Nonprofit Organization</a>
+ <br/><b>Чтобы купить понравившуюся вещь, пожалуйста, звоните нашим организаторам Богне или Ане:</b>
+              <br/> +7 915 2007192 (Богна), +7 925 3205824 (Аня) <br/><b>или напишите нам:</b>
+        <div class="contacts"><a href="https://www.facebook.com/WOŚP-Moskwa-100293481406100/" target="_blank"  class="face">WOŚP Moskwa Nonprofit Organization</a>
               <a href="mailto:wosp.moskwa@gmail.com" class="wosp">wosp.moskwa@gmail.com</a></div>
               <div class="br"></div>
           <div class="eskarbonka">W tym roku szczególnie zachęcamy do bezgotówkowych wpłat.
