--- a/0.html
+++ b/0.html
@@ -48,7 +48,7 @@ E-skarbonka obsługuje wszystkie karty Visa i Mastercard (nie obsługuje karty M
       <h1>Ceny Rub. / PLN | Цены руб. / злотые</h1>
         <h2>Ozdoby choinkowe / Елочные игрушки</h2>
          <div class="goods" id="ozdoby_choinkowe">  
-             <div class="book-01 book-02"><img src="img/aniols.jpg"><b>Aniołki / Ангелочки</b><i>1000 Rub / 50 PLN<br/>(4 szt./шт.)</i></div>  
+             <div class="book-01 book-02"><img src="img/aniols.jpg"><b>Aniołki / Ангелочки</b><i>1000 Rub / 50 PLN<br/>(4 szt./4 шт.)</i></div>  
              <div class="book-01 book-02"><img src="img/matrioszki_01_l.jpg" title="Matrioszki"><b>Matrioszki<br/>Матрешки, ~12 cm</b><i>500 Rub / 25 PLN<br/>(1 szt./ 1 шт.)</i></div>  
              <div class="book-01"><img src="img/choinka_02.jpg"><b>Ozdoba #2<br/>Украшение #2</b><i>500 Rub / 25 PLN</i></div>
               <div class="book-01"><img src="img/choinka_05.jpg"><b>Ozdoba #5<br/>Украшение #5</b><i>500 Rub / 25 PLN</i></div>            
