--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <link rel="shortcut icon" href="https://wospmoskwa.github.io/favicon.ico">
         <title>WOŚP Moskwa 2021 | SZTAB Moskwa zaprasza na targi na rzecz WOŚP 12 grudnia 2020</title>
         <meta name="description" content="Moskiewski sztab Wielkiej Orkiestry Świątecznej Pomocy zaprasza na charytatywny kiermasz literatury polskiej i jarmark bożonarodzeniowy. Całkowity dochód ze sprzedaży przeznaczony będzie na cele 29. Finału WOŚP, czyli zakup sprzętu dla laryngologii, otolaryngologii i diagnostyki głowy" />
-        <link rel="stylesheet" href="css.css" type="text/css" />
+        <link rel="stylesheet" href="css_old.css" type="text/css" />
     </head>
     <body>
         <div class="banner" title="SZTAB Moskwa zaprasza na targi na rzecz WOŚP 12 grudnia 2020">
-            <div>na targi <nobr>na rzecz <b><span style="color: #FFED00;">W</span><span style="color: #EE7003;">O</span><span style="color: #E30613;">Ś</span><span style="color: #E6007E;">P</span></b> 12.12.2020</nobr></div>
+            <div>na targi <nobr>na rzecz <b><span style="color: #FFED00;">W</span><span style="color: #EE7003;">O</span><span style="color: #E30613;">Ś</span><span style="color: #E6007E;">P</span></b></nobr></div>
         </div>
         <div class="main">
      <!-- top menu-->
@@ -28,14 +28,11 @@
          </div-->
          <!-- Ozdoby choinkowe-->
       <div class="anonce"><b>Moskiewski sztab Wielkiej Orkiestry Świątecznej Pomocy</b> oraz Klub języka polskiego w&nbsp;Moskwie zapraszają serdecznie na&nbsp;charytatywny kiermasz literatury polskiej i&nbsp;jarmark bożonarodzeniowy. Całkowity dochód ze sprzedaży przeznaczony będzie na&nbsp;cele 29.&nbsp;Finału WOŚP, czyli zakup sprzętu dla&nbsp;laryngologii, otolaryngologii i&nbsp;diagnostyki głowy.<br/>
-          <b>Kiedy?</b> 12 grudnia 2020 w od 13.00 do 15.00<br/>
-          <b>Gdzie?</b> Antykafe <a href="#map">"Belyj list"</a>, ul. Valovaya 32/75 obok st. metra Dobryninskaya<br/>
+        
 <b>Kontakt:</b> +7 915 2007192 (Bogna), +7 925 3205824 (Ania)
           <p>
           <b>Московский штаб Большого Оркестра Праздничной Помощи</b> и&nbsp;Клуб польского языка в&nbsp;Москве сердечно приглашают Вас на&nbsp;благотворительную ярмарку польской литературы, рождественских крафтовых изделий и&nbsp;подарков.
-              Общий доход от&nbsp;продажи будет направлен на&nbsp;благотворительные цели <nobr>29-го финала</nobr> Большого оркестра праздничной помощи, то&nbsp;есть на&nbsp;покупку оборудования для отоларингологии, <nobr>ЛОР-инструментов</nobr> и&nbsp;диагностики заболеваний головного мозга.
-      <br/>
-          <b>Когда и где?</b> 12 декабря 2020 года с 13.00 до 15.00 в Антикафе <a href="#map">Белый лист</a>, ул. Валовая 32/75, 3 мин от м. Добрынинская<br/>
+              Общий доход от&nbsp;продажи будет направлен на&nbsp;благотворительные цели <nobr>29-го финала</nobr> Большого оркестра праздничной помощи, то&nbsp;есть на&nbsp;покупку оборудования для отоларингологии, <nobr>ЛОР-инструментов</nobr> и&nbsp;диагностики заболеваний головного мозга. <br/>
           <b>Контакты</b> +7 915 2007192 (Богна), +7 925 3205824 (Аня) 
       <div class="contacts"><a href="https://www.facebook.com/WOŚP-Moskwa-100293481406100/" target="_blank"  class="face">WOŚP Moskwa Nonprofit Organization</a>
               <a href="mailto:wosp.moskwa@gmail.com" class="wosp">wosp.moskwa@gmail.com</a></div><div class="br"></div> 
