--- a/0.html
+++ b/0.html
@@ -90,7 +90,7 @@ Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem <b>eSkarbonk
         <div class="br"></div>             
    </div>
         <!--/handmade-->
-      <h2>Kosmetyki Pani Walewska</h2>
+      <h2>Kosmetyki Pani Walewska / Духи и кремы Пани Валевска</h2>
       <div class="goods" id="kosm">
        <div class="book-03"><img src="img/walewska_09.jpg"><b>Pani Walewska Classic</b>  <i>Perfume spray<br/>800 Rub / 40 PLN</i></div>    
         <div class="book-03"><img src="img/walewska_10.jpg"><b>Pani Walewska Classic</b>  <i>Deodorant<br/>300 Rub / 15 PLN</i></div>      
@@ -110,7 +110,7 @@ Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem <b>eSkarbonk
          <div class="book-03"><img src="img/walewska_08.jpg"><b>Gracjia Aloe Nawiłżający<br/>Алое, увлажняющий</b>  <i>Krem do twarzy / Крем для лица<br/>300 Rub / 15 PLN</i></div>    
       <div class="br"></div>
           </div>  
-      <h2>Cukierki</h2>
+      <h2>Cukierki / Конфеты</h2>
       <div class="goods" id="cuker">
           <div class="book-03"><img src="img/cuker_01.jpg"><b>Karamelki POLSKI SPICHLERZ<br/>Карамель POLSKI SPICHLERZ</b><i>250 Rub / 12 PLN</i></div>
           <div class="book-03"><img src="img/cuker_02.jpg"><b>Karamelki POLSKI SPICHLERZ Malinki<br/>Карамель POLSKI SPICHLERZ Малинки</b><i>250 Rub / 12 PLN</i></div> 
