--- a/0.html
+++ b/0.html
@@ -41,7 +41,7 @@ Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem <b>eSkarbonk
         Оплата покупок через <b>eSkarbonka</b> нашего штаба.  </p> 
               
     <div class="br"></div>
-          <a href="https://eskarbonka.wosp.org.pl/vyhqkk" target="_blank" class="eskarbonka" title="eSkarbonka">eSkarbonka obsługuje wszystkie karty Visa i Mastercard (nie obsługuje karty Mir).<p>eSkarbonka обслуживает все типы платежных систем (Visa и Mastercard, кроме карт МИР).</p>                        
+          <a href="https://eskarbonka.wosp.org.pl/vyhqkk" target="_blank" class="eskarbonka" title="eSkarbonka"><b>eSkarbonka</b> obsługuje wszystkie karty Visa i Mastercard (nie obsługuje karty Mir).<br/><b>eSkarbonka</b> обслуживает все типы платежных систем (Visa и Mastercard, кроме карт МИР).                       
           </a>
       </div>       
       
